--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+}
+.record {
+  border: 2px solid orangered;
+  width: 250px;
+  height: 350px;
+  /* text-align: center; */
+  margin-top: 20px;
+  padding: 20px;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.records {
+  display: flex;
+  justify-content: space-evenly;
+
+}
+
+span { 
+  color: purple;
+  font-weight: bold;
+
 }
